Apply wrapper to make sure it doesn't bleed into admin.

--- a/src/css/formed/_links.scss
+++ b/src/css/formed/_links.scss
@@ -1,4 +1,4 @@
-a {
+[id="wrapper"] a {
 	@include frontend-token(color, --link-color, $linkColor);
 
 	&:hover {
